# ca-patterns

./: CHANGELOG.md  README.md  ca-patterns.cabal
app/: Main.hs
app/Data/CA/: List.hs  Pattern.hs
app/Text/: RLE.hs
ca-patterns/: CHANGELOG.md
ca-patterns/src/Data/CA/: Pattern.hs
src/Data/CA/: List.hs  Pattern.hs
src/Text/: RLE.hs
test/: TestPatterns.hs
test/Data/CA/: ListSpec.hs  PatternSpec.hs
test/Text/: RLESpec.hs
