cabal-version:      2.4
name:               ca-patterns
version:            0.0.0.0
author:             UnaryPlus
maintainer:         ombspring@gmail.com

synopsis:
  Data types for life-like cellular automata, functions for creating and
  parsing RLE files

description:
  This package contains data types for working with 2-dimensional 2-state
  cellular automata. It also has functions for creating and parsing RLE
  files. RLE is a textual representation of CA patterns used in applications
  such as Golly and LifeViewer.

homepage:           https://github.com/UnaryPlus/ca-patterns
bug-reports:        https://github.com/UnaryPlus/ca-patterns/issues

license:            MIT
license-file:       LICENSE.md
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/UnaryPlus/ca-patterns.git

library ca-patterns
    exposed-modules:  Data.CA.Pattern,
                      Data.CA.List,
                      Text.RLE

    build-depends:    base >= 4.14.1.0,
                      vector >= 0.12.3.0,
                      text >= 2.0,
                      parsec >= 3.1.15.0

    default-language: Haskell2010

    ghc-options:      -Wall
    hs-source-dirs:   app
